# gui

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  SECURITY.md  libaixcoinkernel.pc.in  libbitcoinkernel.pc.in  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py  ci-windows-cross.py  ci-windows.py
.tx/: config
ci/: lint.py  lint_imagefile  test_imagefile  test_run_all.sh
cmake/: aixcoin-build-config.h.in  bitcoin-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  aixcoin-conf.md  asmap-data.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  (+13 more)
share/: setup.nsi.in
src/: .clang-format  .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  aixcoin-chainstate.cpp  aixcoin-cli-res.rc  aixcoin-cli.cpp  aixcoin-res.rc  aixcoin-tx-res.rc  aixcoin-tx.cpp  aixcoin-util.cpp  (+160 more)
src/ipc/test/: CMakeLists.txt  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_test_types.h  ipc_tests.cpp
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
(+1982 files in other folders)
